tests/fuse/core/types/val_immutable.fuse
// EXPECTED ERROR:
// error: cannot assign to immutable binding `name`
//   --> val_immutable.fuse:8:3

@entrypoint
fn main() {
  val name = "Amara"
  name = "Biko"
}
